[gd_scene format=4 uid="uid://sphpm5x52u7b"]

[ext_resource type="Script" uid="uid://dmevx4ufycew7" path="res://scenes/game_manager.gd" id="1_y5y3l"]
[ext_resource type="Script" uid="uid://cytpwbi3kx3lf" path="res://scenes/movement_manager.gd" id="2_vjgi4"]
[ext_resource type="Script" uid="uid://wx0e1rarmish" path="res://scenes/map_manager.gd" id="3_kyk2p"]
[ext_resource type="Script" uid="uid://bm36chihyvubi" path="res://scenes/monster.gd" id="4_45i86"]
[ext_resource type="Script" uid="uid://d24yhj8d87ic0" path="res://scenes/move_component.gd" id="5_sv1m6"]
[ext_resource type="Texture2D" uid="uid://c46s1no3w86bw" path="res://assets/Scud/DockToDockTileSheet.png" id="6_a8wo8"]
[ext_resource type="PackedScene" uid="uid://in2vnhacdmyn" path="res://scenes/monster.tscn" id="7_attvq"]
[ext_resource type="PackedScene" uid="uid://cmi6in65o5kab" path="res://scenes/grid_space.tscn" id="8_bneo8"]
[ext_resource type="TileSet" uid="uid://ce10bip3dbkai" path="res://scenes/ocean_tileset.tres" id="9_ocgqw"]
[ext_resource type="PackedScene" uid="uid://b0hog3ngstqbs" path="res://scenes/fog.tscn" id="10_jbgew"]
[ext_resource type="PackedScene" uid="uid://tdnaod8tqcwu" path="res://scenes/player/player.tscn" id="11_a85ww"]
[ext_resource type="PackedScene" uid="uid://byp8cu20kjpuq" path="res://scenes/ui/ui.tscn" id="12_mcffj"]

[sub_resource type="Environment" id="Environment_uacia"]
background_mode = 4
ambient_light_source = 1

[sub_resource type="Curve2D" id="Curve2D_gm488"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_7yos8"]
resource_name = "Fog"
scenes/1/scene = ExtResource("10_jbgew")

[sub_resource type="TileSet" id="TileSet_5jxlq"]
tile_shape = 3
tile_size = Vector2i(64, 64)
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetScenesCollectionSource_7yos8")

[node name="Game" type="Node2D" unique_id=2090525509]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=295511451]
environment = SubResource("Environment_uacia")

[node name="AmbientLight" type="CanvasModulate" parent="." unique_id=511686412]
unique_name_in_owner = true
visible = false
color = Color(0.42365062, 0.42365065, 0.42365062, 1)
metadata/_edit_lock_ = true

[node name="Managers" type="Node" parent="." unique_id=1141824964]

[node name="MovementManager" type="Node" parent="Managers" unique_id=729219967]
unique_name_in_owner = true
script = ExtResource("2_vjgi4")

[node name="MapManager" type="Node" parent="Managers" unique_id=104269378]
unique_name_in_owner = true
script = ExtResource("3_kyk2p")

[node name="GameManager" type="Node2D" parent="Managers" unique_id=1470933273]
unique_name_in_owner = true
script = ExtResource("1_y5y3l")

[node name="MonsterPath" type="Path2D" parent="." unique_id=13908955]
position = Vector2(64, 0)
curve = SubResource("Curve2D_gm488")

[node name="Monster" type="PathFollow2D" parent="MonsterPath" unique_id=37895140]
script = ExtResource("4_45i86")

[node name="MoveComponent" type="Node" parent="MonsterPath/Monster" unique_id=1606495288]
unique_name_in_owner = true
script = ExtResource("5_sv1m6")

[node name="Sprite2D" type="Sprite2D" parent="MonsterPath/Monster" unique_id=1785626512]
texture = ExtResource("6_a8wo8")
region_enabled = true
region_rect = Rect2(128, 0, 64, 64)

[node name="GoalDock" type="Area2D" parent="." unique_id=1980325163]
position = Vector2(448, -192)
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GoalDock" unique_id=2093853857]
polygon = PackedVector2Array(-16, 0, 0, -16, 16, 0, 0, 16)

[node name="Monster" parent="." unique_id=490001326 instance=ExtResource("7_attvq")]
position = Vector2(256, 0)

[node name="MoveGridHelper" parent="." unique_id=1424249212 instance=ExtResource("8_bneo8")]
position = Vector2(160, 48)
color = Color(0, 0.64716727, 0.19226319, 1)
hide_color = Color(1, 1, 1, 0)

[node name="TileMaps" type="Node2D" parent="." unique_id=2027819025]

[node name="OceanLayer" type="TileMapLayer" parent="TileMaps" unique_id=339087602 groups=["navigation_polygon_source_geometry_group", "tile_maps"]]
unique_name_in_owner = true
position = Vector2(-32, -32)
tile_map_data = PackedByteArray("AAD9//3/AgAAAAIAAAD9//7/AgAAAAIAAAD9////AgAAAAIAAAD9/wAAAgAAAAIAAAD9/wEAAgAAAAIAAAD9/wMAAgAAAAIAAAD+//z/AgAAAAIAAAD+//3/AgAAAAAAAAD+//7/AgAAAAEAAAD+////AgAAAAAAAAD+/wAAAgAAAAEAAAD+/wEAAgAAAAAAAAD+/wIAAgAAAAIAAAD+/wMAAgAAAAEAAAD+/wQAAgAAAAIAAAD///v/AgAAAAIAAAD///z/AgAAAAIAAAD///3/AgAAAAAAAAD///7/AgAAAAAAAAD/////AgAAAAAAAAD//wAAAgAAAAAAAAD//wEAAgAAAAAAAAD//wIAAgAAAAAAAAD//wMAAgAAAAAAAAD//wQAAgAAAAIAAAD//wUAAgAAAAIAAAAAAPv/AgAAAAIAAAAAAPz/AgAAAAEAAAAAAP3/AgAAAAAAAAAAAP7/AgAAAAAAAAAAAP//AgAAAAAAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAEAAAAAAAYAAgAAAAIAAAABAPv/AgAAAAIAAAABAPz/AgAAAAAAAAABAP3/AgAAAAAAAAABAP7/AgAAAAAAAAABAP//AgAAAAAAAAABAAAAAgAAAAAAAAABAAEAAgAAAAAAAAABAAIAAgAAAAAAAAABAAMAAgAAAAEAAAABAAQAAgAAAAAAAAABAAUAAgABAAAAAAABAAYAAgAAAAIAAAACAPv/AgABAAIAAAACAPz/AgAAAAEAAAACAP3/AgAAAAAAAAACAP7/AgAAAAAAAAACAP//AgAAAAAAAAACAAAAAgAAAAAAAAACAAEAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAEAAAACAAQAAgAAAAAAAAACAAUAAgAAAAEAAAACAAYAAgAAAAIAAAADAPv/AgAAAAIAAAADAPz/AgAAAAAAAAADAP3/AgAAAAEAAAADAP7/AgAAAAAAAAADAP//AgAAAAAAAAADAAAAAgAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAEAAAADAAYAAgAAAAIAAAAEAPv/AgAAAAIAAAAEAPz/AgAAAAEAAAAEAP3/AgAAAAAAAAAEAP7/AgAAAAAAAAAEAP//AgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAYAAgAAAAIAAAAFAPv/AgABAAEAAAAFAPz/AgAAAAAAAAAFAP3/AgAAAAAAAAAFAP7/AgAAAAAAAAAFAP//AgAAAAAAAAAFAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAYAAgAAAAIAAAAGAPv/AgACAAEAAAAGAPz/AgADAAIAAAAGAP3/AgAAAAAAAAAGAP7/AgAAAAAAAAAGAP//AgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAYAAgAAAAIAAAAHAPv/AgADAAEAAAAHAPz/AgACAAIAAAAHAP3/AgAAAAAAAAAHAP7/AgAAAAAAAAAHAP//AgAAAAEAAAAHAAAAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAUAAgAAAAEAAAAHAAYAAgAAAAIAAAAIAPv/AgAAAAIAAAAIAPz/AgAAAAAAAAAIAP3/AgAAAAAAAAAIAP7/AgAAAAEAAAAIAP//AgABAAAAAAAIAAAAAgAAAAEAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAEAAAAIAAYAAgAAAAIAAAAJAPz/AgAAAAIAAAAJAP3/AgAAAAIAAAAJAP7/AgAAAAEAAAAJAP//AgAAAAAAAAAJAAAAAgAAAAAAAAAJAAEAAgAAAAEAAAAJAAIAAgAAAAAAAAAJAAMAAgAAAAEAAAAJAAQAAgAAAAAAAAAJAAUAAgAAAAIAAAAJAAYAAgAAAAIAAAAKAP7/AgAAAAIAAAAKAP//AgAAAAIAAAAKAAAAAgAAAAIAAAAKAAEAAgAAAAIAAAAKAAIAAgAAAAIAAAAKAAMAAgAAAAIAAAAKAAQAAgAAAAIAAAA=")
tile_set = ExtResource("9_ocgqw")
metadata/_edit_lock_ = true

[node name="FogLayer" type="TileMapLayer" parent="TileMaps" unique_id=30611358 groups=["tile_maps"]]
unique_name_in_owner = true
visible = false
position = Vector2(-32, -32)
tile_map_data = PackedByteArray("AAD9//3/AAAAAAAAAQD+//z/AAAAAAAAAQD///z/AAAAAAAAAQD///v/AAAAAAAAAQABAPv/AAAAAAAAAQAAAPv/AAAAAAAAAQADAPv/AAAAAAAAAQAEAPv/AAAAAAAAAQAIAPv/AAAAAAAAAQAJAPz/AAAAAAAAAQAJAP3/AAAAAAAAAQAKAP7/AAAAAAAAAQAKAP//AAAAAAAAAQAKAAAAAAAAAAAAAQAKAAEAAAAAAAAAAQAKAAIAAAAAAAAAAQAKAAMAAAAAAAAAAQAKAAQAAAAAAAAAAQAJAAUAAAAAAAAAAQAJAAYAAAAAAAAAAQAIAAYAAAAAAAAAAQAHAAYAAAAAAAAAAQAGAAYAAAAAAAAAAQAFAAYAAAAAAAAAAQAEAAYAAAAAAAAAAQADAAYAAAAAAAAAAQACAAYAAAAAAAAAAQABAAYAAAAAAAAAAQAAAAYAAAAAAAAAAQD//wUAAAAAAAAAAQD//wQAAAAAAAAAAQD+/wQAAAAAAAAAAQD9/wMAAAAAAAAAAQD+/wIAAAAAAAAAAQD9/wEAAAAAAAAAAQD9/wAAAAAAAAAAAQD9////AAAAAAAAAQD9//7/AAAAAAAAAQACAAEAAAAAAAAAAQADAAAAAAAAAAAAAQADAP//AAAAAAAAAQAEAP7/AAAAAAAAAQAEAP3/AAAAAAAAAQAFAPz/AAAAAAAAAQAFAPv/AAAAAAAAAQAGAPz/AAAAAAAAAQAGAPv/AAAAAAAAAQAHAPz/AAAAAAAAAQAHAPv/AAAAAAAAAQAIAPz/AAAAAAAAAQAHAP3/AAAAAAAAAQAGAP3/AAAAAAAAAQAFAP3/AAAAAAAAAQAFAP7/AAAAAAAAAQAEAP//AAAAAAAAAQAEAAAAAAAAAAAAAQADAAEAAAAAAAAAAQADAAIAAAAAAAAAAQACAAIAAAAAAAAAAQABAAEAAAAAAAAAAQACAAAAAAAAAAAAAQACAP//AAAAAAAAAQADAP7/AAAAAAAAAQADAP3/AAAAAAAAAQAEAPz/AAAAAAAAAQADAPz/AAAAAAAAAQACAPv/AAAAAAAAAQACAPz/AAAAAAAAAQABAPz/AAAAAAAAAQAAAPz/AAAAAAAAAQD///3/AAAAAAAAAQD+//3/AAAAAAAAAQD+//7/AAAAAAAAAQD+////AAAAAAAAAQD///7/AAAAAAAAAQAAAP7/AAAAAAAAAQAAAP3/AAAAAAAAAQABAP7/AAAAAAAAAQABAP3/AAAAAAAAAQACAP7/AAAAAAAAAQACAP3/AAAAAAAAAQABAP//AAAAAAAAAQD+/wAAAAAAAAAAAQD+/wEAAAAAAAAAAQD//wIAAAAAAAAAAQAAAAIAAAAAAAAAAQABAAIAAAAAAAAAAQAAAAMAAAAAAAAAAQD//wMAAAAAAAAAAQD+/wMAAAAAAAAAAQAAAAQAAAAAAAAAAQAAAAUAAAAAAAAAAQABAAQAAAAAAAAAAQABAAMAAAAAAAAAAQACAAQAAAAAAAAAAQACAAMAAAAAAAAAAQADAAQAAAAAAAAAAQADAAMAAAAAAAAAAQAEAAIAAAAAAAAAAQAEAAEAAAAAAAAAAQAFAAAAAAAAAAAAAQAFAP//AAAAAAAAAQAGAP7/AAAAAAAAAQAGAP//AAAAAAAAAQAHAP7/AAAAAAAAAQAHAP//AAAAAAAAAQAIAP7/AAAAAAAAAQAIAP3/AAAAAAAAAQAJAP7/AAAAAAAAAQAIAP//AAAAAAAAAQAIAAAAAAAAAAAAAQAHAAAAAAAAAAAAAQAGAAAAAAAAAAAAAQAFAAEAAAAAAAAAAQAFAAIAAAAAAAAAAQAEAAMAAAAAAAAAAQAEAAQAAAAAAAAAAQADAAUAAAAAAAAAAQACAAUAAAAAAAAAAQABAAUAAAAAAAAAAQAEAAUAAAAAAAAAAQAFAAQAAAAAAAAAAQAFAAMAAAAAAAAAAQAGAAIAAAAAAAAAAQAGAAEAAAAAAAAAAQAHAAIAAAAAAAAAAQAHAAEAAAAAAAAAAQAIAAIAAAAAAAAAAQAIAAEAAAAAAAAAAQAJAAAAAAAAAAAAAQAJAP//AAAAAAAAAQAJAAEAAAAAAAAAAQAJAAIAAAAAAAAAAQAIAAMAAAAAAAAAAQAHAAMAAAAAAAAAAQAGAAMAAAAAAAAAAQAGAAQAAAAAAAAAAQAFAAUAAAAAAAAAAQAGAAUAAAAAAAAAAQAHAAQAAAAAAAAAAQAHAAUAAAAAAAAAAQAIAAQAAAAAAAAAAQAIAAUAAAAAAAAAAQAJAAQAAAAAAAAAAQAJAAMAAAAAAAAAAQA=")
tile_set = SubResource("TileSet_5jxlq")
physics_quadrant_size = 1
metadata/_edit_lock_ = true

[node name="DenseFogLayer" type="TileMapLayer" parent="TileMaps" unique_id=638456289]
unique_name_in_owner = true
visible = false
position = Vector2(-32, -32)
tile_map_data = PackedByteArray("AAD8//3/AgAAAAMAAAD9//z/AgAAAAMAAAD9//v/AgAAAAMAAAD+//v/AgAAAAMAAAD///r/AgAAAAMAAAAAAPr/AgAAAAMAAAABAPr/AgAAAAMAAAD+//r/AgAAAAMAAAD9//r/AgAAAAMAAAD8//r/AgAAAAMAAAD8//v/AgAAAAMAAAD8//z/AgAAAAMAAAAEAPr/AgAAAAMAAAD9//n/AgAAAAMAAAD+//n/AgAAAAMAAAD///n/AgAAAAMAAAAAAPn/AgAAAAMAAAABAPn/AgAAAAMAAAACAPn/AgAAAAMAAAADAPj/AgAAAAMAAAADAPn/AgAAAAMAAAAEAPj/AgAAAAMAAAAEAPn/AgAAAAMAAAAFAPj/AgAAAAMAAAAFAPn/AgAAAAMAAAAGAPj/AgAAAAMAAAAGAPn/AgAAAAMAAAAHAPn/AgAAAAMAAAAIAPn/AgAAAAMAAAAJAPr/AgAAAAMAAAAJAPv/AgAAAAMAAAAKAPv/AgAAAAMAAAAKAPz/AgAAAAMAAAALAPz/AgAAAAMAAAAKAP3/AgAAAAMAAAALAP3/AgAAAAMAAAALAP7/AgAAAAMAAAAMAP7/AgAAAAMAAAALAP//AgAAAAMAAAAMAP//AgAAAAMAAAAMAP3/AgAAAAMAAAAMAPz/AgAAAAMAAAAMAPv/AgAAAAMAAAALAPv/AgAAAAMAAAALAPr/AgAAAAMAAAAKAPr/AgAAAAMAAAAJAPn/AgAAAAMAAAAKAPn/AgAAAAMAAAALAPn/AgAAAAMAAAAMAPr/AgAAAAMAAAALAAAAAgAAAAMAAAAMAAAAAgAAAAMAAAANAAAAAgAAAAMAAAALAAEAAgAAAAMAAAAMAAIAAgAAAAMAAAALAAIAAgAAAAMAAAALAAMAAgAAAAMAAAAMAAQAAgAAAAMAAAALAAQAAgAAAAMAAAALAAUAAgAAAAMAAAALAAYAAgAAAAMAAAALAAcAAgAAAAMAAAALAAgAAgAAAAMAAAAKAAkAAgAAAAMAAAAKAAgAAgAAAAMAAAAKAAcAAgAAAAMAAAAKAAYAAgAAAAMAAAAKAAUAAgAAAAMAAAAMAAYAAgAAAAMAAAAMAAUAAgAAAAMAAAAMAAMAAgAAAAMAAAANAAIAAgAAAAMAAAAMAAEAAgAAAAMAAAANAAMAAgAAAAMAAAANAAQAAgAAAAMAAAANAAUAAgAAAAMAAAANAAYAAgAAAAMAAAAMAAcAAgAAAAMAAAANAAgAAgAAAAMAAAAMAAgAAgAAAAMAAAAMAAkAAgAAAAMAAAALAAkAAgAAAAMAAAD8/wcAAgAAAAMAAAD9/wcAAgAAAAMAAAD+/wcAAgAAAAMAAAD//wcAAgAAAAMAAAAAAAcAAgAAAAMAAAABAAcAAgAAAAMAAAACAAcAAgAAAAMAAAADAAcAAgAAAAMAAAAEAAcAAgAAAAMAAAAFAAcAAgAAAAMAAAAGAAcAAgAAAAMAAAAHAAcAAgAAAAMAAAAIAAcAAgAAAAMAAAAJAAcAAgAAAAMAAAAJAAgAAgAAAAMAAAAIAAgAAgAAAAMAAAAHAAgAAgAAAAMAAAAGAAgAAgAAAAMAAAAFAAgAAgAAAAMAAAAEAAgAAgAAAAMAAAADAAgAAgAAAAMAAAACAAgAAgAAAAMAAAABAAgAAgAAAAMAAAAAAAgAAgAAAAMAAAD//wgAAgAAAAMAAAD+/wgAAgAAAAMAAAD9/wgAAgAAAAMAAAD9/wkAAgAAAAMAAAD+/wkAAgAAAAMAAAD//wkAAgAAAAMAAAAAAAkAAgAAAAMAAAABAAkAAgAAAAMAAAACAAkAAgAAAAMAAAADAAkAAgAAAAMAAAAEAAkAAgAAAAMAAAAFAAkAAgAAAAMAAAAGAAkAAgAAAAMAAAAHAAkAAgAAAAMAAAAIAAkAAgAAAAMAAAAJAAkAAgAAAAMAAAD8/wYAAgAAAAMAAAD7/wUAAgAAAAMAAAD7/wQAAgAAAAMAAAD6/wMAAgAAAAMAAAD7/wIAAgAAAAMAAAD6/wEAAgAAAAMAAAD6/wAAAgAAAAMAAAD6////AgAAAAMAAAD7//7/AgAAAAMAAAD6//3/AgAAAAMAAAD7//3/AgAAAAMAAAD7//z/AgAAAAMAAAD7//v/AgAAAAMAAAD8//7/AgAAAAMAAAD7////AgAAAAMAAAD7/wAAAgAAAAMAAAD8/wAAAgAAAAMAAAD8////AgAAAAMAAAD7/wEAAgAAAAMAAAD8/wEAAgAAAAMAAAD8/wIAAgAAAAMAAAD9/wIAAgAAAAMAAAD8/wMAAgAAAAMAAAD7/wMAAgAAAAMAAAD8/wQAAgAAAAMAAAD9/wQAAgAAAAMAAAD8/wUAAgAAAAMAAAD9/wUAAgAAAAMAAAD+/wUAAgAAAAMAAAD+/wYAAgAAAAMAAAD9/wYAAgAAAAMAAAD//wYAAgAAAAMAAAD8/wkAAgAAAAMAAAD7/wkAAgAAAAMAAAD6/wkAAgAAAAMAAAD6/wgAAgAAAAMAAAD6/wcAAgAAAAMAAAD6/wYAAgAAAAMAAAD6/wUAAgAAAAMAAAD6/wQAAgAAAAMAAAD6/wIAAgAAAAMAAAD7/wYAAgAAAAMAAAD7/wcAAgAAAAMAAAD7/wgAAgAAAAMAAAD8/wgAAgAAAAMAAAD5////AgAAAAMAAAD6//7/AgAAAAMAAAD5//b/AgAAAAMAAAD5//f/AgAAAAMAAAD5//j/AgAAAAMAAAD5//n/AgAAAAMAAAD6//b/AgAAAAMAAAD6//f/AgAAAAMAAAD6//j/AgAAAAMAAAD6//n/AgAAAAMAAAD7//b/AgAAAAMAAAD7//f/AgAAAAMAAAD7//j/AgAAAAMAAAD7//n/AgAAAAMAAAD8//b/AgAAAAMAAAD8//f/AgAAAAMAAAD8//j/AgAAAAMAAAD8//n/AgAAAAMAAAD9//b/AgAAAAMAAAD9//f/AgAAAAMAAAD9//j/AgAAAAMAAAD+//b/AgAAAAMAAAD+//f/AgAAAAMAAAD+//j/AgAAAAMAAAD///b/AgAAAAMAAAD///f/AgAAAAMAAAD///j/AgAAAAMAAAAAAPb/AgAAAAMAAAAAAPf/AgAAAAMAAAAAAPj/AgAAAAMAAAABAPb/AgAAAAMAAAABAPf/AgAAAAMAAAABAPj/AgAAAAMAAAACAPb/AgAAAAMAAAACAPf/AgAAAAMAAAACAPj/AgAAAAMAAAADAPb/AgAAAAMAAAADAPf/AgAAAAMAAAAEAPb/AgAAAAMAAAAEAPf/AgAAAAMAAAAFAPb/AgAAAAMAAAAFAPf/AgAAAAMAAAAGAPb/AgAAAAMAAAAGAPf/AgAAAAMAAAAHAPb/AgAAAAMAAAAHAPf/AgAAAAMAAAAHAPj/AgAAAAMAAAAIAPb/AgAAAAMAAAAIAPf/AgAAAAMAAAAIAPj/AgAAAAMAAAAJAPb/AgAAAAMAAAAJAPf/AgAAAAMAAAAJAPj/AgAAAAMAAAAKAPb/AgAAAAMAAAAKAPf/AgAAAAMAAAAKAPj/AgAAAAMAAAALAPb/AgAAAAMAAAALAPf/AgAAAAMAAAALAPj/AgAAAAMAAAAMAPb/AgAAAAMAAAAMAPf/AgAAAAMAAAAMAPj/AgAAAAMAAAAMAPn/AgAAAAMAAAANAPb/AgAAAAMAAAANAPf/AgAAAAMAAAANAPj/AgAAAAMAAAANAPn/AgAAAAMAAAAOAPb/AgAAAAMAAAAOAPf/AgAAAAMAAAAOAPj/AgAAAAMAAAAOAPn/AgAAAAMAAAAPAPb/AgAAAAMAAAAPAPf/AgAAAAMAAAAPAPj/AgAAAAMAAAAPAPn/AgAAAAMAAAAQAPb/AgAAAAMAAAAQAPf/AgAAAAMAAAAQAPj/AgAAAAMAAAAQAPn/AgAAAAMAAAARAPb/AgAAAAMAAAARAPf/AgAAAAMAAAARAPj/AgAAAAMAAAARAPn/AgAAAAMAAAD1//b/AgAAAAMAAAD1//f/AgAAAAMAAAD1//j/AgAAAAMAAAD1//n/AgAAAAMAAAD1//r/AgAAAAMAAAD1//v/AgAAAAMAAAD1//z/AgAAAAMAAAD1//3/AgAAAAMAAAD1//7/AgAAAAMAAAD1////AgAAAAMAAAD1/wAAAgAAAAMAAAD1/wEAAgAAAAMAAAD1/wIAAgAAAAMAAAD1/wMAAgAAAAMAAAD1/wQAAgAAAAMAAAD1/wUAAgAAAAMAAAD1/wYAAgAAAAMAAAD1/wcAAgAAAAMAAAD1/wgAAgAAAAMAAAD1/wkAAgAAAAMAAAD2//b/AgAAAAMAAAD2//f/AgAAAAMAAAD2//j/AgAAAAMAAAD2//n/AgAAAAMAAAD2//r/AgAAAAMAAAD2//v/AgAAAAMAAAD2//z/AgAAAAMAAAD2//3/AgAAAAMAAAD2//7/AgAAAAMAAAD2////AgAAAAMAAAD2/wAAAgAAAAMAAAD2/wEAAgAAAAMAAAD2/wIAAgAAAAMAAAD2/wMAAgAAAAMAAAD2/wQAAgAAAAMAAAD2/wUAAgAAAAMAAAD2/wYAAgAAAAMAAAD2/wcAAgAAAAMAAAD2/wgAAgAAAAMAAAD2/wkAAgAAAAMAAAD3//b/AgAAAAMAAAD3//f/AgAAAAMAAAD3//j/AgAAAAMAAAD3//n/AgAAAAMAAAD3//r/AgAAAAMAAAD3//v/AgAAAAMAAAD3//z/AgAAAAMAAAD3//3/AgAAAAMAAAD3//7/AgAAAAMAAAD3////AgAAAAMAAAD3/wAAAgAAAAMAAAD3/wEAAgAAAAMAAAD3/wIAAgAAAAMAAAD3/wMAAgAAAAMAAAD3/wQAAgAAAAMAAAD3/wUAAgAAAAMAAAD3/wYAAgAAAAMAAAD3/wcAAgAAAAMAAAD3/wgAAgAAAAMAAAD3/wkAAgAAAAMAAAD4//b/AgAAAAMAAAD4//f/AgAAAAMAAAD4//j/AgAAAAMAAAD4//n/AgAAAAMAAAD4//r/AgAAAAMAAAD4//v/AgAAAAMAAAD4//z/AgAAAAMAAAD4//3/AgAAAAMAAAD4//7/AgAAAAMAAAD4////AgAAAAMAAAD4/wAAAgAAAAMAAAD4/wEAAgAAAAMAAAD4/wIAAgAAAAMAAAD4/wMAAgAAAAMAAAD4/wQAAgAAAAMAAAD4/wUAAgAAAAMAAAD4/wYAAgAAAAMAAAD4/wcAAgAAAAMAAAD4/wgAAgAAAAMAAAD4/wkAAgAAAAMAAAD5//r/AgAAAAMAAAD5//v/AgAAAAMAAAD5//z/AgAAAAMAAAD5//3/AgAAAAMAAAD5//7/AgAAAAMAAAD5/wAAAgAAAAMAAAD5/wEAAgAAAAMAAAD5/wIAAgAAAAMAAAD5/wMAAgAAAAMAAAD5/wQAAgAAAAMAAAD5/wUAAgAAAAMAAAD5/wYAAgAAAAMAAAD5/wcAAgAAAAMAAAD5/wgAAgAAAAMAAAD5/wkAAgAAAAMAAAD6//r/AgAAAAMAAAD6//v/AgAAAAMAAAD6//z/AgAAAAMAAAD7//r/AgAAAAMAAAANAPr/AgAAAAMAAAANAPv/AgAAAAMAAAANAPz/AgAAAAMAAAANAP3/AgAAAAMAAAANAP7/AgAAAAMAAAANAP//AgAAAAMAAAANAAEAAgAAAAMAAAANAAcAAgAAAAMAAAANAAkAAgAAAAMAAAAOAPr/AgAAAAMAAAAOAPv/AgAAAAMAAAAOAPz/AgAAAAMAAAAOAP3/AgAAAAMAAAAOAP7/AgAAAAMAAAAOAP//AgAAAAMAAAAOAAAAAgAAAAMAAAAOAAEAAgAAAAMAAAAOAAIAAgAAAAMAAAAOAAMAAgAAAAMAAAAOAAQAAgAAAAMAAAAOAAUAAgAAAAMAAAAOAAYAAgAAAAMAAAAOAAcAAgAAAAMAAAAOAAgAAgAAAAMAAAAOAAkAAgAAAAMAAAAPAPr/AgAAAAMAAAAPAPv/AgAAAAMAAAAPAPz/AgAAAAMAAAAPAP3/AgAAAAMAAAAPAP7/AgAAAAMAAAAPAP//AgAAAAMAAAAPAAAAAgAAAAMAAAAPAAEAAgAAAAMAAAAPAAIAAgAAAAMAAAAPAAMAAgAAAAMAAAAPAAQAAgAAAAMAAAAPAAUAAgAAAAMAAAAPAAYAAgAAAAMAAAAPAAcAAgAAAAMAAAAPAAgAAgAAAAMAAAAPAAkAAgAAAAMAAAAQAPr/AgAAAAMAAAAQAPv/AgAAAAMAAAAQAPz/AgAAAAMAAAAQAP3/AgAAAAMAAAAQAP7/AgAAAAMAAAAQAP//AgAAAAMAAAAQAAAAAgAAAAMAAAAQAAEAAgAAAAMAAAAQAAIAAgAAAAMAAAAQAAMAAgAAAAMAAAAQAAQAAgAAAAMAAAAQAAUAAgAAAAMAAAAQAAYAAgAAAAMAAAAQAAcAAgAAAAMAAAAQAAgAAgAAAAMAAAAQAAkAAgAAAAMAAAARAPr/AgAAAAMAAAARAPv/AgAAAAMAAAARAPz/AgAAAAMAAAARAP3/AgAAAAMAAAARAP7/AgAAAAMAAAARAP//AgAAAAMAAAARAAAAAgAAAAMAAAARAAEAAgAAAAMAAAARAAIAAgAAAAMAAAARAAMAAgAAAAMAAAARAAQAAgAAAAMAAAARAAUAAgAAAAMAAAARAAYAAgAAAAMAAAARAAcAAgAAAAMAAAARAAgAAgAAAAMAAAARAAkAAgAAAAMAAAD2/woAAgAAAAMAAAD2/wsAAgAAAAMAAAD2/wwAAgAAAAMAAAD2/w0AAgAAAAMAAAD2/w4AAgAAAAMAAAD3/woAAgAAAAMAAAD3/wsAAgAAAAMAAAD3/wwAAgAAAAMAAAD3/w0AAgAAAAMAAAD3/w4AAgAAAAMAAAD4/woAAgAAAAMAAAD4/wsAAgAAAAMAAAD4/wwAAgAAAAMAAAD4/w0AAgAAAAMAAAD4/w4AAgAAAAMAAAD5/woAAgAAAAMAAAD5/wsAAgAAAAMAAAD5/wwAAgAAAAMAAAD5/w0AAgAAAAMAAAD5/w4AAgAAAAMAAAD6/woAAgAAAAMAAAD6/wsAAgAAAAMAAAD6/wwAAgAAAAMAAAD6/w0AAgAAAAMAAAD6/w4AAgAAAAMAAAD7/woAAgAAAAMAAAD7/wsAAgAAAAMAAAD7/wwAAgAAAAMAAAD7/w0AAgAAAAMAAAD7/w4AAgAAAAMAAAD8/woAAgAAAAMAAAD8/wsAAgAAAAMAAAD8/wwAAgAAAAMAAAD8/w0AAgAAAAMAAAD8/w4AAgAAAAMAAAD9/woAAgAAAAMAAAD9/wsAAgAAAAMAAAD9/wwAAgAAAAMAAAD9/w0AAgAAAAMAAAD9/w4AAgAAAAMAAAD+/woAAgAAAAMAAAD+/wsAAgAAAAMAAAD+/wwAAgAAAAMAAAD+/w0AAgAAAAMAAAD+/w4AAgAAAAMAAAD//woAAgAAAAMAAAD//wsAAgAAAAMAAAD//wwAAgAAAAMAAAD//w0AAgAAAAMAAAD//w4AAgAAAAMAAAAAAAoAAgAAAAMAAAAAAAsAAgAAAAMAAAAAAAwAAgAAAAMAAAAAAA0AAgAAAAMAAAAAAA4AAgAAAAMAAAABAAoAAgAAAAMAAAABAAsAAgAAAAMAAAABAAwAAgAAAAMAAAABAA0AAgAAAAMAAAABAA4AAgAAAAMAAAACAAoAAgAAAAMAAAACAAsAAgAAAAMAAAACAAwAAgAAAAMAAAACAA0AAgAAAAMAAAACAA4AAgAAAAMAAAADAAoAAgAAAAMAAAADAAsAAgAAAAMAAAADAAwAAgAAAAMAAAADAA0AAgAAAAMAAAADAA4AAgAAAAMAAAAEAAoAAgAAAAMAAAAEAAsAAgAAAAMAAAAEAAwAAgAAAAMAAAAEAA0AAgAAAAMAAAAEAA4AAgAAAAMAAAAFAAoAAgAAAAMAAAAFAAsAAgAAAAMAAAAFAAwAAgAAAAMAAAAFAA0AAgAAAAMAAAAFAA4AAgAAAAMAAAAGAAoAAgAAAAMAAAAGAAsAAgAAAAMAAAAGAAwAAgAAAAMAAAAGAA0AAgAAAAMAAAAGAA4AAgAAAAMAAAAHAAoAAgAAAAMAAAAHAAsAAgAAAAMAAAAHAAwAAgAAAAMAAAAHAA0AAgAAAAMAAAAHAA4AAgAAAAMAAAAIAAoAAgAAAAMAAAAIAAsAAgAAAAMAAAAIAAwAAgAAAAMAAAAIAA0AAgAAAAMAAAAIAA4AAgAAAAMAAAAJAAoAAgAAAAMAAAAJAAsAAgAAAAMAAAAJAAwAAgAAAAMAAAAJAA0AAgAAAAMAAAAJAA4AAgAAAAMAAAAKAAoAAgAAAAMAAAAKAAsAAgAAAAMAAAAKAAwAAgAAAAMAAAAKAA0AAgAAAAMAAAAKAA4AAgAAAAMAAAALAAoAAgAAAAMAAAALAAsAAgAAAAMAAAALAAwAAgAAAAMAAAALAA0AAgAAAAMAAAALAA4AAgAAAAMAAAAMAAoAAgAAAAMAAAAMAAsAAgAAAAMAAAAMAAwAAgAAAAMAAAAMAA0AAgAAAAMAAAAMAA4AAgAAAAMAAAANAAoAAgAAAAMAAAANAAsAAgAAAAMAAAANAAwAAgAAAAMAAAANAA0AAgAAAAMAAAANAA4AAgAAAAMAAAAOAAoAAgAAAAMAAAAOAAsAAgAAAAMAAAAOAAwAAgAAAAMAAAAOAA0AAgAAAAMAAAAOAA4AAgAAAAMAAAAPAAoAAgAAAAMAAAAPAAsAAgAAAAMAAAAPAAwAAgAAAAMAAAAPAA0AAgAAAAMAAAAPAA4AAgAAAAMAAAAQAAoAAgAAAAMAAAAQAAsAAgAAAAMAAAAQAAwAAgAAAAMAAAAQAA0AAgAAAAMAAAAQAA4AAgAAAAMAAAARAAoAAgAAAAMAAAARAAsAAgAAAAMAAAARAAwAAgAAAAMAAAARAA0AAgAAAAMAAAARAA4AAgAAAAMAAAASAAoAAgAAAAMAAAASAAsAAgAAAAMAAAASAAwAAgAAAAMAAAASAA0AAgAAAAMAAAASAA4AAgAAAAMAAAASAPb/AgAAAAMAAAASAPf/AgAAAAMAAAASAPj/AgAAAAMAAAASAPn/AgAAAAMAAAASAPr/AgAAAAMAAAASAPv/AgAAAAMAAAASAPz/AgAAAAMAAAASAP3/AgAAAAMAAAASAP7/AgAAAAMAAAASAP//AgAAAAMAAAASAAAAAgAAAAMAAAASAAEAAgAAAAMAAAASAAIAAgAAAAMAAAASAAMAAgAAAAMAAAASAAQAAgAAAAMAAAASAAUAAgAAAAMAAAASAAYAAgAAAAMAAAASAAcAAgAAAAMAAAASAAgAAgAAAAMAAAASAAkAAgAAAAMAAAD1/woAAgAAAAMAAAD1/wsAAgAAAAMAAAD1/wwAAgAAAAMAAAD1/w0AAgAAAAMAAAD1/w4AAgAAAAMAAAD1//T/AgAAAAMAAAD1//X/AgAAAAMAAAD2//T/AgAAAAMAAAD2//X/AgAAAAMAAAD3//T/AgAAAAMAAAD3//X/AgAAAAMAAAD4//T/AgAAAAMAAAD4//X/AgAAAAMAAAD5//T/AgAAAAMAAAD5//X/AgAAAAMAAAD6//T/AgAAAAMAAAD6//X/AgAAAAMAAAD7//T/AgAAAAMAAAD7//X/AgAAAAMAAAD8//T/AgAAAAMAAAD8//X/AgAAAAMAAAD9//T/AgAAAAMAAAD9//X/AgAAAAMAAAD+//T/AgAAAAMAAAD+//X/AgAAAAMAAAD///T/AgAAAAMAAAD///X/AgAAAAMAAAAAAPT/AgAAAAMAAAAAAPX/AgAAAAMAAAABAPT/AgAAAAMAAAABAPX/AgAAAAMAAAACAPT/AgAAAAMAAAACAPX/AgAAAAMAAAADAPT/AgAAAAMAAAADAPX/AgAAAAMAAAAEAPT/AgAAAAMAAAAEAPX/AgAAAAMAAAAFAPT/AgAAAAMAAAAFAPX/AgAAAAMAAAAGAPT/AgAAAAMAAAAGAPX/AgAAAAMAAAAHAPT/AgAAAAMAAAAHAPX/AgAAAAMAAAAIAPT/AgAAAAMAAAAIAPX/AgAAAAMAAAAJAPT/AgAAAAMAAAAJAPX/AgAAAAMAAAAKAPT/AgAAAAMAAAAKAPX/AgAAAAMAAAALAPT/AgAAAAMAAAALAPX/AgAAAAMAAAAMAPT/AgAAAAMAAAAMAPX/AgAAAAMAAAANAPT/AgAAAAMAAAANAPX/AgAAAAMAAAAOAPT/AgAAAAMAAAAOAPX/AgAAAAMAAAAPAPT/AgAAAAMAAAAPAPX/AgAAAAMAAAAQAPT/AgAAAAMAAAAQAPX/AgAAAAMAAAARAPT/AgAAAAMAAAARAPX/AgAAAAMAAAASAPT/AgAAAAMAAAASAPX/AgAAAAMAAAD1//L/AgAAAAMAAAD1//P/AgAAAAMAAAD2//L/AgAAAAMAAAD2//P/AgAAAAMAAAD3//L/AgAAAAMAAAD3//P/AgAAAAMAAAD4//L/AgAAAAMAAAD4//P/AgAAAAMAAAD5//L/AgAAAAMAAAD5//P/AgAAAAMAAAD6//L/AgAAAAMAAAD6//P/AgAAAAMAAAD7//L/AgAAAAMAAAD7//P/AgAAAAMAAAD8//L/AgAAAAMAAAD8//P/AgAAAAMAAAD9//L/AgAAAAMAAAD9//P/AgAAAAMAAAD+//L/AgAAAAMAAAD+//P/AgAAAAMAAAD///L/AgAAAAMAAAD///P/AgAAAAMAAAAAAPL/AgAAAAMAAAAAAPP/AgAAAAMAAAABAPL/AgAAAAMAAAABAPP/AgAAAAMAAAACAPL/AgAAAAMAAAACAPP/AgAAAAMAAAADAPL/AgAAAAMAAAADAPP/AgAAAAMAAAAEAPL/AgAAAAMAAAAEAPP/AgAAAAMAAAAFAPL/AgAAAAMAAAAFAPP/AgAAAAMAAAAGAPL/AgAAAAMAAAAGAPP/AgAAAAMAAAAHAPL/AgAAAAMAAAAHAPP/AgAAAAMAAAAIAPL/AgAAAAMAAAAIAPP/AgAAAAMAAAAJAPL/AgAAAAMAAAAJAPP/AgAAAAMAAAAKAPL/AgAAAAMAAAAKAPP/AgAAAAMAAAALAPL/AgAAAAMAAAALAPP/AgAAAAMAAAAMAPL/AgAAAAMAAAAMAPP/AgAAAAMAAAANAPL/AgAAAAMAAAANAPP/AgAAAAMAAAAOAPL/AgAAAAMAAAAOAPP/AgAAAAMAAAAPAPL/AgAAAAMAAAAPAPP/AgAAAAMAAAAQAPL/AgAAAAMAAAAQAPP/AgAAAAMAAAARAPL/AgAAAAMAAAARAPP/AgAAAAMAAAASAPL/AgAAAAMAAAASAPP/AgAAAAMAAAA=")
tile_set = ExtResource("9_ocgqw")
metadata/_edit_lock_ = true

[node name="ToastTimer" type="Timer" parent="." unique_id=404106981]
unique_name_in_owner = true
wait_time = 0.35
one_shot = true

[node name="StartPos" type="Node2D" parent="." unique_id=675361562]
unique_name_in_owner = true

[node name="Player" parent="." unique_id=1154284220 instance=ExtResource("11_a85ww")]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="Player" unique_id=1545285726]

[node name="UICanvas" type="CanvasLayer" parent="." unique_id=1395519378]
layer = 2

[node name="UI" parent="UICanvas" unique_id=2090082481 instance=ExtResource("12_mcffj")]
unique_name_in_owner = true
